--- a/MotoGP-Desktop/piloto.html
+++ b/MotoGP-Desktop/piloto.html
@@ -31,6 +31,13 @@
         donde obtuvo su primera victoria en el Gran Premio de España de 2025.
         Previamente compitió con los equipos Repsol Honda en 2020 y LCR Honda en 2021 y 2022. Ha ganado dos títulos del Campeonato del Mundo de Motociclismo (en Moto3 en 2014 y en Moto2 en 2019).
     </p>
+
+    <picture>
+        <source srcset="multimedia/alex-marquez-gresini-racing_mobile.jpg" media="(max-width: 465px)">
+        <source srcset="multimedia/alex-marquez-gresini-racing_tablet" media="(max-width: 799px)">
+        <source srcset="multimedia/alex-marquez-gresini-racing_monitor.jpg" media="(min-width: 800px)">
+        <img src="multimedia/alex-marquez-gresini-racing.jpg" alt="Daniel Ricciardo" loading="lazy">
+    </picture>
     
     <h3>Datos personales</h3>
     <ul>
