--- a/MotoGP-Desktop/juegos.html
+++ b/MotoGP-Desktop/juegos.html
@@ -10,11 +10,14 @@
     <meta name="keywords" content="MotoGP,juegos" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
+    <link rel="icon" href="multimedia/favicon.ico">
 </head>
 
 <body>
     <!-- Datos con el contenidos que aparece en el navegador -->
-    <h1>MotoGP Desktop</h1>
+     
+    <header>
+    <h1><a href="index.html" title="Ir a la página principal">MotoGP Desktop</a></h1>
     <nav>
         <a href="index.html" title="Inicio MotoGPDekstop">Inicio</a>
         <a href="piloto.html" title="Piloto MotoGPDekstopstop">Piloto</a>
@@ -24,7 +27,11 @@
         <a href="juegos.html" title="Juegos MotoGPDekstop">Juegos</a>
         <a href="ayuda.html" title="Ayuda MotoGPDekstopstop">Ayuda</a>
     </nav>
+    <header>
+	<p>Estás en: <a href="index.html">Inicio</a> >> Juegos</p>
+    <main>
     <h2>Juegos de MotoGP-Desktop</h2>
     <p>En desarrollo</p>
+    </main>
 </body>
 </html>
