--- a/MotoGP-Desktop/piloto.html
+++ b/MotoGP-Desktop/piloto.html
@@ -10,113 +10,144 @@
     <meta name="keywords" content="MotoGP,piloto,Álex Márquez" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
+    <link rel="icon" href="multimedia/favicon.ico">
 </head>
 
 <body>
     <!-- Datos con el contenidos que aparece en el navegador -->
-    <h1>MotoGP Desktop</h1>
-    <nav>
-        <a href="index.html" title="Inicio MotoGPDekstop">Inicio</a>
-        <a href="piloto.html" title="Piloto MotoGPDekstopstop">Piloto</a>
-        <a href="circuito.html" title="Circuito MotoGPDekstop">Circuito</a>
-        <a href="meteorologia.html" title="Meteorología MotoGPDekstop">Meteorología</a>
-        <a href="clasificaciones.html" title="Clasificaciones MotoGPDekstop">Clasificaciones</a>
-        <a href="juegos.html" title="Juegos MotoGPDekstop">Juegos</a>
-        <a href="ayuda.html" title="Ayuda MotoGPDekstopstop">Ayuda</a>
-    </nav>
-    <h2>Álex Márquez</h2>
-    <h3>Presentación</h3>
-    <p>
-        Alejandro Márquez Alentà, más conocido como Álex Márquez, es un piloto de motociclismo español que compite en la «categoría reina» de MotoGP con el equipo Gresini Racing,
-        donde obtuvo su primera victoria en el Gran Premio de España de 2025.
-        Previamente compitió con los equipos Repsol Honda en 2020 y LCR Honda en 2021 y 2022. Ha ganado dos títulos del Campeonato del Mundo de Motociclismo (en Moto3 en 2014 y en Moto2 en 2019).
-    </p>
-
-    <picture>
-        <source srcset="multimedia/alex-marquez-gresini-racing_mobile.jpg" media="(max-width: 465px)">
-        <source srcset="multimedia/alex-marquez-gresini-racing_tablet" media="(max-width: 799px)">
-        <source srcset="multimedia/alex-marquez-gresini-racing_monitor.jpg" media="(min-width: 800px)">
-        <img src="multimedia/alex-marquez-gresini-racing.jpg" alt="Daniel Ricciardo" loading="lazy">
-    </picture>
-    
-    <h3>Datos personales</h3>
-    <ul>
-        <li>Fecha de nacimiento: 23 de abril de 1996</li>
-        <li>Lugar de nacimiento: Cervera, Lérida</li>
-        <li>Altura: 1,8m</li>
-        <li>Peso: 65kg</li>
-        <li>Moto: BK8 Gresini Racing MotoGP</li>
-        <li>Dorsal: 73</li>
-    </ul>
-
-    <h3>Equipos</h3>   
-    <ol>
-        <li>Estrella Galicia 0,0</li>
-        <li>Ambroggio Next Racing</li>
-        <li>EG 0,0 Marc VDS</li>
-        <li>Repsol Honda Team</li>
-        <li>LCR Honda CASTROL</li>
-        <li>Gresini Racing</li>
-    </ol>
-
-    <h3>Conceptos MotoGP</h3>
-    <dl>
-        <dt>Highside</dt>
-        <dd>Caída violenta del piloto cuando la rueda trasera pierde tracción y luego recupera agarre bruscamente.</dd>
-        <dt>Lowside</dt>
-        <dd>Caída en la que la moto se desliza hacia el interior de la curva, generalmente por pérdida de adherencia.</dd>
-        <dt>Slipstream</dt>
-        <dd>Corriente de aire que reduce la resistencia aerodinámica detrás de otro piloto, utilizada para ganar velocidad y adelantar.</dd>
-        <dt>Wheelie</dt>
-        <dd>Levantamiento de la rueda delantera debido a una aceleración excesiva. En carrera, se busca controlar o evitar.</dd>
-        <dt>Holeshot</dt>
-        <dd>Situación en la que un piloto toma la delantera en la primera curva tras la salida.</dd>        
-    </dl>
-
-    <h3>Resultados</h3>
-    <table>
-        <thead>
-            <tr>
-                <th scope="col">Puntos</th>
-                <th scope="col">Posición</th>
-                <th scope="col">Poles</th>
-                <th scope="col">Victorias</th>
-                <th scope="col">Podios</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>173</td>
-                <td>8º</td>
-                <td>0</td>
-                <td>0</td>
-                <td>1</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <h3>Enlaces externos</h3>
-    <p>Puedes buscar más información en estas páginas web externas:</p>
-        <a href="https://www.motogp.com/es/riders/alex-marquez/41195f0f-9817-4a4d-913e-c1fbbb351d9b?tab=overview" title="MotoGP" target="_blank">Página oficial de Álex Márquez en MotoGP</a>
-        <br>
-        <a href="https://es.wikipedia.org/wiki/%C3%81lex_M%C3%A1rquez" title="Wikipedia Álex Márquez" target="-blank">Wikipedia de Álex Márquez</a>
-    <h3>Más información</h3>
-    <p>El hermano menor del vigente campeón del mundo de MotoGP™, Marc Márquez, Alex Márquez comenzó su camino hacia el escenario mundial en 2010 cuando se unió al equipo de competición Monlau 125 en el FIM CEV Repsol. No participó en la primera carrera del campeonato, ya que estaba cinco días por debajo de la edad mínima para competir. 
-        Sin embargo, en la segunda carrera, celebrada en Albacete, logró el 11.º puesto. Ese año terminó 11.º en la clasificación final con 24 puntos.</p>       
-    <p> En 2011, estuvo muy cerca de terminar en lo más alto de la temporada, pero perdió por poco ante su rival de mayor edad, Alex Rins.</p>
-    <p>2012 resultó ser su año, ya que ganó el título del Moto3™ CEV y participó en numerosas carreras como wildcard en el Campeonato Mundial de Moto3™, incluyendo una actuación increíble en el GP de Cataluña.</p>
-    <p>Para la temporada 2013, se unió a tiempo completo al equipo Estrella Galicia 0,0 y aseguró su primera victoria en Motegi, quedando cuarto en la general.</p>
-    <p>En 2014, Márquez ganó más carreras y consiguió más podios en su camino hacia el Campeonato Mundial de Moto3™.</p>
-    <p>Márquez ascendió entonces a Moto2™ con el equipo EG0,0 Marc VDS en 2015 y tuvo un duro año de debut con dos top 4, buscando ampliar el potencial que mostró al año siguiente, ya que piloto y equipo permanecieron unidos en 2016. 
-        Empezó la temporada con una lesión en el brazo, pero luego consiguió su primer podio con una impresionante carrera en MotorLand Aragón para terminar segundo tras un duelo en la última curva. 
-        Consiguiendo su primera victoria en la categoría intermedia tras demostrar su imparabilidad en casa en Jerez, Márquez continuó con otra victoria en casa en el GP de Cataluña. 
-        Lesionado a mitad de temporada y con un tiempo de recuperación completa, el piloto de Cervera no pudo luchar por el título, pero se alzó con el cuarto puesto en la general, tras otra victoria en Motegi en una obra maestra táctica.</p>
-    <p>En 2018, Márquez logró seis podios, pero pasó el año sin ganar.</p>
-    <p>Permaneciendo con el equipo un año más, en 2019 Márquez dio el salto al podio. Cinco victorias y otros cinco podios le permitieron conseguir su segundo Campeonato del Mundo a falta de una carrera y, tras la retirada de Jorge Lorenzo de MotoGP™, el entonces Campeón del Mundo de Moto2™ vistió los colores de Repsol Honda para acompañar a su hermano Marc en 2020.</p>
-    <p> En 2021, permaneció con Honda, pero en las filas de Honda Castrol de LCR bajo la tutela de Lucio Cecchinello. Un paquete Honda con problemas hizo que Márquez tuviera dificultades para encontrar su forma, pero el cuarto puesto en el GP del Algarve fue un recordatorio de la velocidad que posee.</p>
-    <p>Manteniéndose con LCR en 2022, una nueva moto HRC no pudo mejorar los resultados, ya que Márquez no logró entrar entre los seis primeros en todo el año. </p>
-    <p>En 2023, el español se subió a la GP22 de Bagnaia, ganadora del Campeonato, al sustituir a Bastianini en Gresini Racing. Dos podios dominicales llegaron, el mejor de los cuales llegó en Malasia con un segundo puesto, mientras que una victoria al sprint en Silverstone. 
-        Le esperaba una segunda temporada con Gresini Ducati en 2024, con el momento culminante en Alemania, donde él y su hermano mayor (y compañero de equipo) Marc subieron juntos al podio el domingo. </p>
-    <p>Tras un séptimo puesto en el Campeonato y un buen final de temporada, Márquez luchará por su primera victoria y podios regulares cuando se quede con Gresini en 2025.</p>
-    </body>
+    <header>
+        <h1><a href="index.html" title="Ir a la página principal">MotoGP Desktop</a></h1>
+        <nav>
+            <a href="index.html" title="Inicio MotoGPDekstop">Inicio</a>
+            <a href="piloto.html" title="Piloto MotoGPDekstopstop">Piloto</a>
+            <a href="circuito.html" title="Circuito MotoGPDekstop">Circuito</a>
+            <a href="meteorologia.html" title="Meteorología MotoGPDekstop">Meteorología</a>
+            <a href="clasificaciones.html" title="Clasificaciones MotoGPDekstop">Clasificaciones</a>
+            <a href="juegos.html" title="Juegos MotoGPDekstop">Juegos</a>
+            <a href="ayuda.html" title="Ayuda MotoGPDekstopstop">Ayuda</a>
+        </nav>
+    </header>
+    <p>Estás en: <a href="index.html">Inicio</a> >> Piloto</p>
+    <main>
+        <h2>Álex Márquez</h2>
+        <section>
+            <h3>Presentación</h3>
+            <p>
+                Alejandro Márquez Alentà, más conocido como Álex Márquez, es un piloto de motociclismo español que compite en la «categoría reina» de MotoGP con el equipo Gresini Racing,
+                donde obtuvo su primera victoria en el Gran Premio de España de 2025.
+                Previamente compitió con los equipos Repsol Honda en 2020 y LCR Honda en 2021 y 2022. Ha ganado dos títulos del Campeonato del Mundo de Motociclismo (en Moto3 en 2014 y en Moto2 en 2019).
+            </p>
+        </section>
+        <section>
+            <h3>Imagen</h3>
+            <picture>
+                <source srcset="multimedia/alex-marquez-gresini-racing_mobile.jpg" media="(max-width: 465px)">
+                <source srcset="multimedia/alex-marquez-gresini-racing_tablet.jpg" media="(max-width: 799px)">
+                <source srcset="multimedia/alex-marquez-gresini-racing_monitor.jpg" media="(min-width: 800px)">
+                <img src="multimedia/alex-marquez-gresini-racing.jpg" alt="Álex Márquez" loading="lazy">
+            </picture>
+        </section>
+        <section>
+            <h3>Datos personales</h3>
+            <ul>
+                <li>Fecha de nacimiento: 23 de abril de 1996</li>
+                <li>Lugar de nacimiento: Cervera, Lérida</li>
+                <li>Altura: 1,8m</li>
+                <li>Peso: 65kg</li>
+                <li>Moto: BK8 Gresini Racing MotoGP</li>
+                <li>Dorsal: 73</li>
+            </ul>
+        </section>
+        <section>
+        <h3>Videos</h3>
+            <video controls>
+                <source src="multimedia/celebracion_alex_marquez.mp4" type="video/mp4">
+                <source src="multimedia/celebracion_alex_marquez.webm" type="video/webm">
+            </video>
+        </section>
+        <section>
+        <h3>Equipos</h3>   
+            <ol>
+                <li>Estrella Galicia 0,0</li>
+                <li>Ambroggio Next Racing</li>
+                <li>EG 0,0 Marc VDS</li>
+                <li>Repsol Honda Team</li>
+                <li>LCR Honda CASTROL</li>
+                <li>Gresini Racing</li>
+            </ol>
+        </section>
+        <section>
+            <h3>Audios</h3>
+            <audio controls>
+                <source src="multimedia/concepto.mp3" type="audio/mp3">
+                <source src="multimedia/concepto.wav" type="audio/wav">
+            </audio>
+        </section>
+        <aside>
+            <h3>Conceptos MotoGP</h3>
+            <dl>
+                <dt>Highside</dt>
+                <dd>Caída violenta del piloto cuando la rueda trasera pierde tracción y luego recupera agarre bruscamente.</dd>
+                <dt>Lowside</dt>
+                <dd>Caída en la que la moto se desliza hacia el interior de la curva, generalmente por pérdida de adherencia.</dd>
+                <dt>Slipstream</dt>
+                <dd>Corriente de aire que reduce la resistencia aerodinámica detrás de otro piloto, utilizada para ganar velocidad y adelantar.</dd>
+                <dt>Wheelie</dt>
+                <dd>Levantamiento de la rueda delantera debido a una aceleración excesiva. En carrera, se busca controlar o evitar.</dd>
+                <dt>Holeshot</dt>
+                <dd>Situación en la que un piloto toma la delantera en la primera curva tras la salida.</dd>        
+            </dl>
+        </aside>
+        <section>
+            <h3>Resultados</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th id="puntos" scope="col">Puntos</th>
+                        <th id="posicion" scope="col">Posición</th>
+                        <th id="poles" scope="col">Poles</th>
+                        <th id="victorias" scope="col">Victorias</th>
+                        <th id="podios" scope="col">Podios</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td headers="puntos">173</td>
+                        <td headers="posicion">8º</td>
+                        <td headers="poles">0</td>
+                        <td headers="victorias">0</td>
+                        <td headers="podios">1</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <section>
+            <h3>Enlaces externos</h3>
+            <p>Puedes buscar más información en estas páginas web externas:</p>
+                <a href="https://www.motogp.com/es/riders/alex-marquez/41195f0f-9817-4a4d-913e-c1fbbb351d9b?tab=overview" title="MotoGP" target="_blank">Página oficial de Álex Márquez en MotoGP</a>
+                <br>
+                <a href="https://es.wikipedia.org/wiki/%C3%81lex_M%C3%A1rquez" title="Wikipedia Álex Márquez" target="-blank">Wikipedia de Álex Márquez</a>
+        </section>
+        <section>
+        <h3>Más información</h3>
+            <p>El hermano menor del vigente campeón del mundo de MotoGP™, Marc Márquez, Alex Márquez comenzó su camino hacia el escenario mundial en 2010 cuando se unió al equipo de competición Monlau 125 en el FIM CEV Repsol. No participó en la primera carrera del campeonato, ya que estaba cinco días por debajo de la edad mínima para competir. 
+                Sin embargo, en la segunda carrera, celebrada en Albacete, logró el 11.º puesto. Ese año terminó 11.º en la clasificación final con 24 puntos.</p>       
+            <p> En 2011, estuvo muy cerca de terminar en lo más alto de la temporada, pero perdió por poco ante su rival de mayor edad, Alex Rins.</p>
+            <p>2012 resultó ser su año, ya que ganó el título del Moto3™ CEV y participó en numerosas carreras como wildcard en el Campeonato Mundial de Moto3™, incluyendo una actuación increíble en el GP de Cataluña.</p>
+            <p>Para la temporada 2013, se unió a tiempo completo al equipo Estrella Galicia 0,0 y aseguró su primera victoria en Motegi, quedando cuarto en la general.</p>
+            <p>En 2014, Márquez ganó más carreras y consiguió más podios en su camino hacia el Campeonato Mundial de Moto3™.</p>
+            <p>Márquez ascendió entonces a Moto2™ con el equipo EG0,0 Marc VDS en 2015 y tuvo un duro año de debut con dos top 4, buscando ampliar el potencial que mostró al año siguiente, ya que piloto y equipo permanecieron unidos en 2016. 
+                Empezó la temporada con una lesión en el brazo, pero luego consiguió su primer podio con una impresionante carrera en MotorLand Aragón para terminar segundo tras un duelo en la última curva. 
+                Consiguiendo su primera victoria en la categoría intermedia tras demostrar su imparabilidad en casa en Jerez, Márquez continuó con otra victoria en casa en el GP de Cataluña. 
+                Lesionado a mitad de temporada y con un tiempo de recuperación completa, el piloto de Cervera no pudo luchar por el título, pero se alzó con el cuarto puesto en la general, tras otra victoria en Motegi en una obra maestra táctica.</p>
+            <p>En 2018, Márquez logró seis podios, pero pasó el año sin ganar.</p>
+            <p>Permaneciendo con el equipo un año más, en 2019 Márquez dio el salto al podio. Cinco victorias y otros cinco podios le permitieron conseguir su segundo Campeonato del Mundo a falta de una carrera y, tras la retirada de Jorge Lorenzo de MotoGP™, el entonces Campeón del Mundo de Moto2™ vistió los colores de Repsol Honda para acompañar a su hermano Marc en 2020.</p>
+            <p> En 2021, permaneció con Honda, pero en las filas de Honda Castrol de LCR bajo la tutela de Lucio Cecchinello. Un paquete Honda con problemas hizo que Márquez tuviera dificultades para encontrar su forma, pero el cuarto puesto en el GP del Algarve fue un recordatorio de la velocidad que posee.</p>
+            <p>Manteniéndose con LCR en 2022, una nueva moto HRC no pudo mejorar los resultados, ya que Márquez no logró entrar entre los seis primeros en todo el año. </p>
+            <p>En 2023, el español se subió a la GP22 de Bagnaia, ganadora del Campeonato, al sustituir a Bastianini en Gresini Racing. Dos podios dominicales llegaron, el mejor de los cuales llegó en Malasia con un segundo puesto, mientras que una victoria al sprint en Silverstone. 
+                Le esperaba una segunda temporada con Gresini Ducati en 2024, con el momento culminante en Alemania, donde él y su hermano mayor (y compañero de equipo) Marc subieron juntos al podio el domingo. </p>
+            <p>Tras un séptimo puesto en el Campeonato y un buen final de temporada, Márquez luchará por su primera victoria y podios regulares cuando se quede con Gresini en 2025.</p>
+        </section>
+    </main>
+</body>
 </html>
