--- a/MotoGP-Desktop_P9/ayuda.html
+++ b/MotoGP-Desktop_P9/ayuda.html
@@ -33,11 +33,8 @@
     <h2>Ayuda de MotoGP-Desktop</h2>
         <h3>Index</h3>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Ejercicio 2: Adaptabilidad    
+            Esta es la página principal de MotoGP-Desktop. Aquí encontrarás un carrusel con imágenes representativas del circuito de Jérez,
+            así como noticias recientes relacionadas con MotoGP.
         </p>
             <h3>Piloto</h3>
             <p>
@@ -47,19 +44,15 @@
             </p>
             <h3>Circuito</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Ejercicio 2: Adaptabilidad    
+                Esta página te permite introducir archivos svg, kml y html para obtener información sobre el Circuito de Jérez.
+                Al cargar estos archivos, se muestran detalles como la longitud del circuito, el número de curvas, la altitud máxima y mínima,
+                asñi como una vista de la altrimetría del circuito y una representación visual del mismo sobre un mapa.
+
             </p>
             <h3>Clasificaciones</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Ejercicio 2: Adaptabilidad    
+               En esta sección se presentan las clasificaciones de los pilotos y equipos de MotoGP. 
+               La información se obtiene de una base de datos MySQL y se muestra en tablas ordenadas por puntos    
             </p>
             <h3>Juegos</h3>
             <p>
