--- a/MotoGP-Desktop_P9/cronometro.html
+++ b/MotoGP-Desktop_P9/cronometro.html
@@ -31,11 +31,10 @@
     </header>
     <p>Estás en: <a href="index.html">Inicio</a> >> <a href="juegos.html">Juegos</a>>>Cronómetro</p>
     <main> 
-        <h2>Prueba Unitaria: Cronómetro</h2>
-        
-        <p>00:00.0</p>
-        
+        <h2>Prueba Unitaria: Cronómetro</h2>    
         <section>
+            <h3>Cronómetro</h3>
+            <p>00:00.0</p>
             <button>Arrancar</button>
             <button>Parar</button>
             <button>Reiniciar</button>
