--- a/MotoGP-Desktop_P9/juegos.html
+++ b/MotoGP-Desktop_P9/juegos.html
@@ -37,7 +37,7 @@
         <li><a href="cronometro.html" title="Jugar al juego del cronómetro">Cronómetro</a></li>
         <li><a href="cronometro.php" title="Jugar al juego del cronómetro en php">Cronómetro PHP</a></li>
         <li><a href="php/configuracion.php" title="Configuración de la BD en php">Configuración Test</a></li>
-        <li><a href="php/prueba.php" title="Test en php">Test</a></li>
+        <li><a href="php/prueba.php" target="_blank" title="Test en php">Test</a></li>
     </ul>
     </main>
 </body>
