--- a/MotoGP-Desktop_P9/memoria.html
+++ b/MotoGP-Desktop_P9/memoria.html
@@ -36,6 +36,8 @@
     <main> 
         <h2>Juego de memoria con cartas</h2> 
         <p>00:00.0</p>
+        <p>Haz clic en las cartas para voltearlas y encontrar las parejas de pilotos. Al seleccionar dos iguales, estas quedarán reveladas permanentemente; si no coinciden, volverán a su posición original automáticamente.</p>
+       
 
         <article>
             <h3>Memory Card</h3>
