--- a/MotoGP-Desktop_P9/meteorologia.html
+++ b/MotoGP-Desktop_P9/meteorologia.html
@@ -30,7 +30,7 @@
         <a href="ayuda.html" title="Ayuda MotoGPDekstop">Ayuda</a>
     </nav>
     </header>
-    <p>Estás en: <a href="index.html">Inicio</a> >> <strong>Meteorología</strong></p>
+    <p>Estás en: <a href="index.html">Inicio</a> >> Meteorología</p>
     <main>
         <h2>Meteorologia de MotoGP-Desktop</h2>
         <section>
