--- a/MotoGP-Desktop_P9/piloto.html
+++ b/MotoGP-Desktop_P9/piloto.html
@@ -28,7 +28,7 @@
             <a href="ayuda.html" title="Ayuda MotoGPDekstop">Ayuda</a>
         </nav>
     </header>
-    <p>Estás en: <a href="index.html">Inicio</a> >> <strong>Piloto</strong></p>
+    <p>Estás en: <a href="index.html">Inicio</a> >> Piloto</p>
     <main>
         <h2>Álex Márquez</h2>
         <section>
