--- a/MotoGP-Desktop_P9/xml/InfoCircuito.html
+++ b/MotoGP-Desktop_P9/xml/InfoCircuito.html
@@ -20,22 +20,22 @@
         <section>
             <h4>Datos Generales</h4>
             <ul>
-                <li><strong>Longitud:</strong> 5793.0 metros</li>
-                <li><strong>Anchura:</strong> 12 metros</li>
-                <li><strong>Fecha:</strong> 2025-04-27</li>
-                <li><strong>Hora:</strong> 14:00:00</li>
-                <li><strong>Vueltas:</strong> 25</li>
-                <li><strong>Localidad:</strong> Jerez de la Frontera</li>
-                <li><strong>País:</strong> España</li>
-                <li><strong>Patrocinador:</strong> Estrella Galicia 0,0</li>
+                <li> Longitud: 5793.0 metros</li>
+                <li> Anchura: 12 metros</li>
+                <li> Fecha: 2025-04-27</li>
+                <li> Hora: 14:00:00</li>
+                <li> Vueltas: 25</li>
+                <li> Localidad: Jerez de la Frontera</li>
+                <li> País: España</li>
+                <li> Patrocinador: Estrella Galicia 0,0</li>
             </ul>
         </section>
         <section>
             <h4>Coordenadas del Centro</h4>
             <ul>
-                <li><strong>Latitud:</strong> 36.7103</li>
-                <li><strong>Longitud:</strong> -6.0328</li>
-                <li><strong>Altitud:</strong> 40</li>
+                <li> Latitud: 36.7103</li>
+                <li> Longitud: -6.0328</li>
+                <li> Altitud: 40</li>
             </ul>
         </section>
         <section>
