--- a/MotoGP-Desktop_P9/ayuda.html
+++ b/MotoGP-Desktop_P9/ayuda.html
@@ -28,7 +28,7 @@
             <a href="ayuda.html" title="Ayuda MotoGPDekstop" class="active">Ayuda</a>
         </nav>
     </header>
-    <p>Estás en: <a href="index.html">Inicio</a> >> <strong>Ayuda</strong></p>
+    <p>Estás en: <a href="index.html">Inicio</a> >> Ayuda</p>
     <main>
     <h2>Ayuda de MotoGP-Desktop</h2>
         <h3>Index</h3>
