--- a/MotoGP-Desktop_P9/test_form.html
+++ b/MotoGP-Desktop_P9/test_form.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="es"><head><style>body {transition: opacity ease-in 0.2s; } 
 body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relative; } 
 </style>
@@ -26,29 +25,28 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
                         <label>Edad: <input type="number" name="edad" required="" min="10" max="100"></label>
                     </p>
                     <p>
-                        <label>Género: 
+                        <label for="genero">Género:</label>
                             <select name="genero">
                                 <option value="Hombre">Hombre</option>
                                 <option value="Mujer">Mujer</option>
                                 <option value="Otro">Otro</option>
                             </select>
-                        </label>
+                        
                         <label>Pericia Informática (0-10): <input type="number" name="pericia" min="0" max="10" required=""></label>
                     </p>
                     <p>
-                        <label>Dispositivo utilizado:
-                            <select name="dispositivo">
-                                <option value="Ordenador">Ordenador</option>
-                                <option value="Tableta">Tableta</option>
-                                <option value="Móvil">Móvil</option>
-                            </select>
-                        </label>
+                        <label for="dispositivo">Dispositivo utilizado:</label>
+                        <select name="dispositivo">
+                            <option value="Ordenador">Ordenador</option>
+                            <option value="Tableta">Tableta</option>
+                            <option value="Móvil">Móvil</option>
+                        </select>
                     </p>
 
                     <h3>2. Tareas y Preguntas</h3>
                     <p>Por favor, realice las comprobaciones y conteste:</p>
                     
-                    <label>1. ¿Ha encontrado el calendario? <input type="text" name="p1" required=""></label><br>
+                    <label>1. ¿Es útil la ayuda? <input type="text" name="p1" required=""></label><br>
                     <label>2. ¿Cómo valora la carga de imágenes? <input type="text" name="p2" required=""></label><br>
                     <label>3. ¿Es legible el tamaño de letra? <input type="text" name="p3" required=""></label><br>
                     <label>4. ¿Funcionó el mapa dinámico? <input type="text" name="p4" required=""></label><br>
@@ -64,13 +62,12 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
                     <label>Comentarios:<br><textarea name="comentarios"></textarea></label><br>
                     <label>Propuestas de mejora:<br><textarea name="propuestas"></textarea></label>
 
-                    <p style="margin-top: 20px;">
+                    <p>
                         <input type="submit" name="finalizar_cuestionario" value="Terminar Prueba">
                     </p>
                 </form>
             </section>
 
-        <!-- VISTA 3: ZONA DEL FACILITADOR -->
             </main>
 
 </body></html>
