--- a/MotoGP-Desktop_P9/test_form.html
+++ b/MotoGP-Desktop_P9/test_form.html
@@ -25,7 +25,7 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
                         <label>Edad: <input type="number" name="edad" required="" min="10" max="100"></label>
                     </p>
                     <p>
-                        <label for="genero">Género:</label>
+                        <label for="genero" id="genero">Género:</label>
                             <select name="genero">
                                 <option value="Hombre">Hombre</option>
                                 <option value="Mujer">Mujer</option>
@@ -35,7 +35,7 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
                         <label>Pericia Informática (0-10): <input type="number" name="pericia" min="0" max="10" required=""></label>
                     </p>
                     <p>
-                        <label for="dispositivo">Dispositivo utilizado:</label>
+                        <label for="dispositivo" id="dispositivo">Dispositivo utilizado:</label>
                         <select name="dispositivo">
                             <option value="Ordenador">Ordenador</option>
                             <option value="Tableta">Tableta</option>
